...
        };
    }
  }, [t, uiState]);

  return (
    <Layout showNavigation={false} disableScroll style={styles.layout}>
      <View testID="add-meal-photo-preparing-screen" style={styles.screen}>
        <AddMealFlowHeader
          progress={flow.progress}
          onBack={handleBack}
          onClose={handleCloseFlow}
          containerStyle={styles.flowHeader}
          testID="add-meal-photo-preparing-flow-header"
...
