...
        {t("review_meal_edit_meal_basics", {
          defaultValue: "Main details",
        })}
      </Text>

      <TextInput
        testID="meal-name-input"
        label={t("meal_name")}
        value={mealName}
        onChangeText={onMealNameChange}
        onBlur={onMealNameBlur}
        placeholder={t("manual_meal_name_placeholder", {
          defaultValue: "Enter meal name",
...
