appId: com.lkurczab.fitaly
---
- runFlow: login.yaml
- tapOn:
    id: tab-add-meal
- assertVisible:
    id: meal-add-option-manual
- tapOn:
    id: meal-add-option-manual
- assertVisible:
    id: meal-details-form-screen
- tapOn:
    id: meal-name-input
- eraseText
- inputText: Smoke Manual Meal
- hideKeyboard
- tapOn:
    id: meal-details-form-submit-button
- assertVisible:
    id: review-meal-screen
- tapOn:
    id: review-meal-save-button
- assertVisible:
    id: tab-home
